# CG1

./: .gitignore
ex01/: CMakeLists.txt  readme.txt
ex01/3d-Model/: 3d-model.3ds  3d-model2.blend
ex01/src/: cg1_ex1.cpp  context.cpp  context.h  ex_2d.sage  glutcallbacks.cpp  node.cpp  node.h  robot.cpp  robot.h  scenegraph.cpp  scenegraph.h
ex02/: CMakeLists.txt  createDoc.sh  run.sh
ex02/doc/: doc.tex
ex02/src/: cell.cpp  cell.h  cg1_ex2.cpp  context.cpp  context.h  objmodel.cpp  objmodel.h  projection.cpp  projection.h  readme.txt  window.cpp  window.h
ex02/src/glm-0.9.3.4/glm/: CMakeLists.txt
ex03/: CMakeLists.txt  createDoc.sh  run.sh
ex03/doc/: doc.tex
ex03/src/: Checker.cpp  Checker.h  ErrorDevel.cpp  ErrorDevel.h  GLSLShader.cpp  GLSLShader.h  Mesh.cpp  Mesh.h  cg1_ex3.cpp
ex03/src/meshes/: drei.off  singleTriangle.off
ex03/src/shaders/: BlinnPhong.frag  BlinnPhong.vert  PassThrough.frag  PassThrough.vert  myBlinnPhong.frag  myBlinnPhong.vert
ex04/: createDoc.sh  run.sh
ex04/doc/: doc.tex
ex04/src/: CMakeLists.txt  Context.cpp  Context.hpp  GLSLShader.cpp  GLSLShader.h  Image.cpp  Image.hpp  Mesh.cpp  Mesh.h  Texture.cpp  Texture.hpp  Vec3f.cpp  Vec3f.h  cg1_ex4.cpp
ex04/src/shaders/: emBlinnPhong.frag  emBlinnPhong.vert
ex05/: build.sh  createDoc.sh  run.sh
ex05/doc/: doc.tex
ex05/src/: Box.cpp  Box.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Ray.h  Scene.cpp  Scene.h  Vec3f.cpp  Vec3f.h  cg1_ex5.cpp
