 
PROJECT(cg1_ex01)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(NATIVE_SRC_ROOT "src")

SET(src_files
	"${NATIVE_SRC_ROOT}/cg1_ex1.cpp"
	"${NATIVE_SRC_ROOT}/context.cpp"
	"${NATIVE_SRC_ROOT}/node.cpp"
	"${NATIVE_SRC_ROOT}/robot.cpp"
	"${NATIVE_SRC_ROOT}/scenegraph.cpp"
	)

INCLUDE_DIRECTORIES(${NATIVE_SRC_ROOT})

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${src_files})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})

