 
PROJECT(cg1_ex02)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(GML_ROOT ../common/glm-0.9.3.4)
ADD_SUBDIRECTORY(${GML_ROOT}/glm ${CMAKE_BINARY_DIR}/gml)

SET(NATIVE_SRC_ROOT "src")

SET(src_files
	"${NATIVE_SRC_ROOT}/cell.cpp"
	"${NATIVE_SRC_ROOT}/cg1_ex2.cpp"
	"${NATIVE_SRC_ROOT}/context.cpp"
	"${NATIVE_SRC_ROOT}/objmodel.cpp"
	"${NATIVE_SRC_ROOT}/projection.cpp"
	"${NATIVE_SRC_ROOT}/window.cpp"
	)

INCLUDE_DIRECTORIES(${NATIVE_SRC_ROOT})
INCLUDE_DIRECTORIES(${GML_ROOT})

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${src_files})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} glm)

