
PROJECT(cg1_ex05)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(CMAKE_BUILD_TYPE DEBUG)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../../common/cmake_modules)

SET(GML_ROOT ../../common/glm-0.9.3.4)
ADD_SUBDIRECTORY(${GML_ROOT}/glm ${CMAKE_BINARY_DIR}/gml)

SET(NATIVE_SRC_ROOT ".")

SET(src_files
	"${NATIVE_SRC_ROOT}/cg1_ex5.cpp"
	"${NATIVE_SRC_ROOT}/Box.cpp"
	"${NATIVE_SRC_ROOT}/Mesh.cpp"
	"${NATIVE_SRC_ROOT}/Ray.cpp"
	"${NATIVE_SRC_ROOT}/Scene.cpp"
	"${NATIVE_SRC_ROOT}/Vec3f.cpp"
	)

INCLUDE_DIRECTORIES(${NATIVE_SRC_ROOT})
INCLUDE_DIRECTORIES(${GML_ROOT})

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})

FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${src_files})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARY} glm)

